# doc-vlm

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
api/: __init__.py  main.py  model_router.py
configs/prompts/: checkbox_dense_grid_v1.yaml  table_simple_v1.yaml
docker/: docker-compose.yml  init_db.sql
docker/grafana/dashboards/: dashboard.yml
docker/grafana/datasources/: prometheus.yml
docker/prometheus/: prometheus.yml
inference/: __init__.py  confidence_scorer.py  olmocr_adapter.py  prompt_selector.py  self_consistency.py  tasks.py
ml_platform/: __init__.py  active_learning.py  annotation_queue.py  calibration.py  dataset_manager.py  model_registry.py
preprocessing/: __init__.py  image_enhancer.py  layout_detector.py
scripts/: run_demo.sh  synthetic_data_generator.py  test_security_fix.py  verify_milestone1.py
tests/: __init__.py
tests/integration/: test_end_to_end.py
tests/regression/: __init__.py  test_benchmarks.py
tests/unit/: test_layout_detector.py  test_model_registry.py  test_security.py
ui/: __init__.py  demo_app.py  monitoring_dashboard.py
validation/: __init__.py  rule_engine.py  schema_mapper.py
